--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,13 @@
             android:layout_marginStart="20dp"
             android:textSize="16sp"
             android:text="暂停" />
+        <Button
+            android:id="@+id/btn_resume"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:textSize="16sp"
+            android:text="RESUME" />
     </LinearLayout>
 
 </RelativeLayout>
